# vakint

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: oneloop_evaluation.rs  simple_evaluation.rs  twoloop_matching.rs
form_src/: integrateduv.frm
form_src/alphaloop/: integrateduv.frm
src/: fmft.rs  fmft_numerics.rs  graph.rs  lib.rs  matad.rs  symbols.rs  topologies.rs  utils.rs
src/symbolica_community_module/: mod.rs
templates/: run_alphaloop_integral_evaluation.txt  run_fmft.txt  run_matad.txt  run_pySecDec_template.txt  run_tensor_reduction.txt
tests/: input_matching_tests.rs  integral_alphaloop_vs_matad_tests.rs  integral_comparison_vs_pysecdec_tests.rs  integral_evaluation_analytic_tests.rs  integral_evaluation_freeform_tests.rs  integral_evaluation_pysecdec_tests.rs  integral_evaluation_tests.rs  integral_evaluation_vs_pysecdec_tests.rs  tensor_reduction_tests.rs  test_utils.rs
