[package]
name = "vakint"
version = "1.0.0"
edition = "2024"

[profile.dev-optim]
inherits = "dev"
opt-level = 2
#lto=true

[dependencies]
symbolica = { version = "0.19.2" }
# symbolica = { git = "https://github.com/benruijl/symbolica", rev = "2801141d9ee7c852727cef70f4dbc35cc26e6d5f" }
#symbolica = { git = "https://github.com/benruijl/symbolica.git", rev = "c10688d92271dd061fc71bfe81eb3157e59830d6" }
#symbolica = { git = "https://github.com/benruijl/symbolica.git", branch = "main", rev = "c10688d92271dd061fc71bfe81eb3157e59830d6" }

# pyo3 = { version = "0.25", features = ["anyhow"], optional = true }
# pyo3-stub-gen = { version = "0.13", default-features = false, optional = true }
pyo3 = { version = "0.27", features = ["anyhow"], optional = true }
pyo3-stub-gen = { version = "0.16", default-features = false, optional = true }


anyhow = "1.0.86"
thiserror = "1.0.63"
arrayvec = "0.7.4"
colored = "2.1.0"
string-template-plus = "*"
version-compare = "*"
regex = "*"
ahash = "*"
log = "*"
rug = "*"
[dependencies.phf]
version = "*"
features = ["macros"]

[dev-dependencies]
test-log = "*"


[features]
symbolica_community_module = ["dep:pyo3", "symbolica/python_export"]
python_stubgen = [
    "symbolica/python_stubgen",
    "symbolica/python_export",
    "dep:pyo3-stub-gen",
]
#default = ["symbolica_community_module", "python_stubgen"]

[patch.crates-io]
# symbolica = { git = "https://github.com/benruijl/symbolica", branch = "complex_coeff" }
symbolica = { git = "https://github.com/benruijl/symbolica", rev = "93680d5098e1bdc8a69dc2f59c548f653a46f9e7" }
