[package]
name = "vakint"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Computation of single-scale vacuum integrals for High-Energy Physics"
homepage = "https://alphal00p.github.io/"
repository = "https://github.com/alphal00p/vakint"
readme = "README.md"
keywords = ["physics", "loop integral", "vaccuum", "quantum field theory"]
categories = ["science"]

[profile.dev-optim]
inherits = "dev"
opt-level = 2
#lto=true

[dependencies]
symbolica = { version = "1.0" }

pyo3 = { version = "0.27", features = ["anyhow"], optional = true }
pyo3-stub-gen = { version = "0.17", default-features = false, optional = true }


anyhow = "1.0.86"
thiserror = "1.0.63"
arrayvec = "0.7.4"
colored = "2.1.0"
string-template-plus = "*"
version-compare = "*"
regex = "*"
ahash = "*"
log = "*"
rug = "*"
[dependencies.phf]
version = "*"
features = ["macros"]

[dev-dependencies]
test-log = "*"


[features]
symbolica_community_module = ["dep:pyo3", "symbolica/python_export"]
python_stubgen = [
    "symbolica/python_stubgen",
    "symbolica/python_export",
    "dep:pyo3-stub-gen",
]
