[package]
name = "vakint"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Computation of single-scale vacuum integrals for High-Energy Physics"
homepage = "https://alphal00p.github.io/"
repository = "https://github.com/alphal00p/vakint"
readme = "README.md"
keywords = ["physics", "integral", "vaccuum", "QFT"]
categories = ["science"]

[profile.dev-optim]
inherits = "dev"
opt-level = 2
#lto=true

[dependencies]
symbolica = { version = "1.3", default-features = false, features = ["tracing_max_level_info"] }

pyo3 = { version = "0.27", features = ["anyhow"], optional = true }
pyo3-stub-gen = { version = "0.17", default-features = false, optional = true }


anyhow = "1.0.86"
thiserror = "1.0.63"
arrayvec = "0.7.4"
colored = "2.1.0"
string-template-plus = "0.4.3"
version-compare = "0.2.1"
regex = "1.12.2"
ahash = "0.8.12"
log = "0.4.29"
rug = "1.28.0"
[dependencies.phf]
version = "0.13.1"
features = ["macros"]

[dev-dependencies]
test-log = "0.2.19"


[features]
symbolica_community_module = ["dep:pyo3", "symbolica/python_export"]
python_stubgen = [
    "symbolica/python_stubgen",
    "symbolica/python_export",
    "dep:pyo3-stub-gen",
]
